--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "npx rimraf dist/bundle.js",
-    "build-prod": "webpack --mode production",
-    "start-dev": "webpack-dev-server --mode development"
+    "clean": "npx rimraf dist",
+    "build-dev": "webpack --env development --mode development",
+    "build-prod": "webpack --env production --mode production",
+    "start-dev": "webpack-dev-server --env development --mode development"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,9 @@
     "autoprefixer": "^10.3.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.0",
     "postcss-loader": "^6.1.1",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
@@ -29,5 +32,8 @@
     "webpack-dev-server": "^4.0.0",
     "webpack-merge": "^5.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^5.1.0",
+    "popper.js": "^1.16.1"
+  }
 }
