--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "clean": "npx rimraf dist",
-    "build-dev": "webpack --env development --mode development",
-    "build-prod": "webpack --env production --mode production",
-    "start-dev": "webpack-dev-server --env development --mode development"
+    "build-dev": "webpack --config ./webpack.config.js --env env=dev",
+    "build-prod": "webpack --config ./webpack.config.js --env env=prod",
+    "start-dev": "webpack-dev-server --env env=dev"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.3.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "dotenv-webpack": "^7.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.2.0",
